@@ -5,6 +5,155 @@ This document contains a log of changes to the FoundationDB Record Layer. It aim
 
 As the [versioning guide](Versioning.md) details, it cannot always be determined solely by looking at the version numbers whether one Record Layer version contains all changes included in another. In particular, bug fixes and backwards-compatible changes might be back-ported to or introduced as patches against older versions. To track when a patch version has been included in the main release train, some releases will say as a note that they contain all changes from a specific patch.
 
+## 4.2
+
+### 4.2.4.0
+
+<h4> Bug Fixes </h4>
+
+* Fix wasNull state across toString() calls in RowStruct - [PR #3276](https://github.com/FoundationDB/fdb-record-layer/pull/3276)
+<h4> Dependency Updates </h4>
+
+* Downgrade protobuf version back to 3.25.5 and grpc common proto to 2.37.0 - [PR #3287](https://github.com/FoundationDB/fdb-record-layer/pull/3287)
+
+<details>
+<summary>
+
+<h4> Build/Test/Documentation/Style Improvements (click to expand) </h4>
+
+</summary>
+
+* Decrease the number of builds compared during mixed mode to the most recent 10 - [PR #3289](https://github.com/FoundationDB/fdb-record-layer/pull/3289)
+* Added workflow for creating branches for patch releases - [PR #3192](https://github.com/FoundationDB/fdb-record-layer/pull/3192)
+* Rework SqlLineTest so that it actually interacts with the database - [PR #3273](https://github.com/FoundationDB/fdb-record-layer/pull/3273)
+* Fix warning from sphinxDocs about missing _static directory. - [PR #3283](https://github.com/FoundationDB/fdb-record-layer/pull/3283)
+* Remove get_old_version step from release build - [PR #3277](https://github.com/FoundationDB/fdb-record-layer/pull/3277)
+* Remove a bunch of blank lines in unsupported methods - [PR #3267](https://github.com/FoundationDB/fdb-record-layer/pull/3267)
+
+</details>
+
+
+**[Full Changelog (4.2.3.0...4.2.4.0)](https://github.com/FoundationDB/fdb-record-layer/compare/4.2.3.0...4.2.4.0)**
+
+#### Mixed Mode Test Results
+
+Mixed mode testing run against the following previous versions:
+
+❌`4.0.574.0`, ❌`4.0.575.0`, ❌`4.1.4.0`, ✅`4.1.5.0`, ✅`4.1.6.0`, ✅`4.1.8.0`, ✅`4.1.9.0`, ✅`4.1.10.0`, ✅`4.2.2.0`, ✅`4.2.3.0`
+
+[See full test run](https://github.com/FoundationDB/fdb-record-layer/actions/runs/14230097202)
+
+
+
+### 4.2.3.0
+
+<h4> New Features </h4>
+
+* Add support for UUID as primitive type in SQL - [PR #3198](https://github.com/FoundationDB/fdb-record-layer/pull/3198)
+
+<details>
+<summary>
+
+<h4> Build/Test/Documentation/Style Improvements (click to expand) </h4>
+
+</summary>
+
+* Fix release note since 4.2.1.0 release did not get published to maven central - [PR #3279](https://github.com/FoundationDB/fdb-record-layer/pull/3279)
+* Remove more @ExcludeFromJacocoGeneratedReport - [PR #3278](https://github.com/FoundationDB/fdb-record-layer/pull/3278)
+
+</details>
+
+
+**[Full Changelog (4.2.2.0...4.2.3.0)](https://github.com/FoundationDB/fdb-record-layer/compare/4.2.2.0...4.2.3.0)**
+
+#### Mixed Mode Test Results
+
+Mixed mode testing run against the following previous versions:
+
+❌`4.0.559.1`, ❌`4.0.559.2`, ❌`4.0.559.3`, ❌`4.0.559.4`, ❌`4.0.559.6`, ❌`4.0.561.0`, ❌`4.0.562.0`, ❌`4.0.564.0`, ❌`4.0.565.0`, ❌`4.0.566.0`, ❌`4.0.567.0`, ❌`4.0.568.0`, ❌`4.0.569.0`, ❌`4.0.570.0`, ❌`4.0.571.0`, ❌`4.0.572.0`, ❌`4.0.573.0`, ❌`4.0.574.0`, ❌`4.0.575.0`, ❌`4.1.4.0`, ✅`4.1.5.0`, ✅`4.1.6.0`, ✅`4.1.8.0`, ✅`4.1.9.0`, ✅`4.1.10.0`
+
+[See full test run](https://github.com/FoundationDB/fdb-record-layer/actions/runs/14134843186)
+
+### 4.2.2.1
+
+<h4> Dependency Updates </h4>
+
+* Downgrade protobuf version back to 3.25.5 and grpc common proto to 2.37.0  - [PR #3288](https://github.com/FoundationDB/fdb-record-layer/pull/3288)
+
+<details>
+<summary>
+
+<h4> Build/Test/Documentation/Style Improvements (click to expand) </h4>
+
+</summary>
+
+* Decrease the number of builds compared during mixed mode to the most recent 10 - [PR #3290](https://github.com/FoundationDB/fdb-record-layer/pull/3290)
+
+</details>
+
+
+**[Full Changelog (4.2.2.0...4.2.2.1)](https://github.com/FoundationDB/fdb-record-layer/compare/4.2.2.0...4.2.2.1)**
+
+#### Mixed Mode Test Results
+
+Mixed mode testing run against the following previous versions:
+
+❌`4.0.574.0`, ❌`4.0.575.0`, ❌`4.1.4.0`, ✅`4.1.5.0`, ✅`4.1.6.0`, ✅`4.1.8.0`, ✅`4.1.9.0`, ✅`4.1.10.0`, ✅`4.2.2.0`, ✅`4.2.3.0`
+
+[See full test run](https://github.com/FoundationDB/fdb-record-layer/actions/runs/14239522793)
+
+
+
+
+### 4.2.2.0
+
+<h4> Breaking Changes </h4>
+
+* Lucene: AnalyzerChooser no longer takes the text when choosing an analyzer - [PR #2994](https://github.com/FoundationDB/fdb-record-layer/pull/2994)
+* Remove deprecated DatabaseTemplate - [PR #3270](https://github.com/FoundationDB/fdb-record-layer/pull/3270)
+* Queries using versions now use a serialization that requires 4.1 - [PR #3245](https://github.com/FoundationDB/fdb-record-layer/pull/3245)
+<h4> New Features </h4>
+
+* Support defining UDFs in `RecordMetaData` - [PR #2995](https://github.com/FoundationDB/fdb-record-layer/pull/2995)
+<h4> Bug Fixes </h4>
+
+* Change some error messages to format with Locale.ROOT - [PR #3255](https://github.com/FoundationDB/fdb-record-layer/pull/3255)
+<h4> Dependency Updates </h4>
+
+* Update protobuf dependency to 4.30.1 and grpc-commonProtos dependency to 2.54.1 - [PR #3258](https://github.com/FoundationDB/fdb-record-layer/pull/3258)
+
+<details>
+<summary>
+
+<h4> Build/Test/Documentation/Style Improvements (click to expand) </h4>
+
+</summary>
+
+* Have create_release_notes.py get the old version from ReleaseNotes.md - [PR #3275](https://github.com/FoundationDB/fdb-record-layer/pull/3275)
+* Add cleanup to list of potential labels for PRs - [PR #3268](https://github.com/FoundationDB/fdb-record-layer/pull/3268)
+* Remove a bunch of references to @ExcludeFromJacocoGeneratedReport - [PR #3269](https://github.com/FoundationDB/fdb-record-layer/pull/3269)
+* Allow having YamlTestExtension include method name in test names - [PR #3253](https://github.com/FoundationDB/fdb-record-layer/pull/3253)
+* Prepare for upgrade to Protobuf 4 by removing deprecated or removed calls - [PR #3260](https://github.com/FoundationDB/fdb-record-layer/pull/3260)
+* Remove Artifactory publishing logic from gradle build - [PR #3256](https://github.com/FoundationDB/fdb-record-layer/pull/3256)
+* Remove unused build files - [PR #3257](https://github.com/FoundationDB/fdb-record-layer/pull/3257)
+* Allow specifying a custom cluster file to FRL and YamlTestExtension  - [PR #3251](https://github.com/FoundationDB/fdb-record-layer/pull/3251)
+* Remove -Xverify:none from build - [PR #3244](https://github.com/FoundationDB/fdb-record-layer/pull/3244)
+* Add missing explicit dependencies for gradle tasks - [PR #3250](https://github.com/FoundationDB/fdb-record-layer/pull/3250)
+* SchemaTemplateSerDeTests: Replace ibm's Pair with our NonnullPair - [PR #3248](https://github.com/FoundationDB/fdb-record-layer/pull/3248)
+
+</details>
+
+**[Full Changelog (4.1.10.0...4.2.2.0)](https://github.com/FoundationDB/fdb-record-layer/compare/4.1.10.0...4.2.2.0)**
+
+#### Mixed Mode Test Results
+
+Mixed mode testing run against the following previous versions:
+
+❌`4.0.559.1`, ❌`4.0.559.2`, ❌`4.0.559.3`, ❌`4.0.559.4`, ❌`4.0.559.6`, ❌`4.0.561.0`, ❌`4.0.562.0`, ❌`4.0.564.0`, ❌`4.0.565.0`, ❌`4.0.566.0`, ❌`4.0.567.0`, ❌`4.0.568.0`, ❌`4.0.569.0`, ❌`4.0.570.0`, ❌`4.0.571.0`, ❌`4.0.572.0`, ❌`4.0.573.0`, ❌`4.0.574.0`, ❌`4.0.575.0`, ❌`4.1.4.0`, ✅`4.1.5.0`, ✅`4.1.6.0`, ✅`4.1.8.0`, ✅`4.1.9.0`, ✅`4.1.10.0`
+
+[See full test run](https://github.com/FoundationDB/fdb-record-layer/actions/runs/14116508725)
+
+
 ## 4.1
 
 ### Features
